# square_diamond

./: main.c  makefile  map.c  map.h  test.c
haskell_impl/: ChangeLog.md  LICENSE  diamond-square.cabal
haskell_impl/src/: HeightMap.hs  HeightMapRepa.hs  HeigtMapMutVec.hs  Main.hs  Map.hs
src/: main.c  makefile  map.c  map.h  util.c  util.h
test/: find_two_greater_1.c  find_two_greater_1_correct.txt  makefile  map_cpy_1.c  map_cpy_1_correct.txt  map_init_1.c  map_init_1_correct.txt  map_set_height_1.c  map_set_water_height_1.c  map_set_water_height_1_correct.txt  map_shallow_cmp_1.c  map_shallow_cmp_1_correct.txt  map_square_diamond_1.c
