name:                diamond-square
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Magnus Stavngaard
maintainer:          magnus@stavngaard.dk
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable diamond-square
  main-is:             Main.hs
  other-modules:       HeightMapRepa, HeigtMapMutVec
  GHC-Options:         -Wall -Odph -rtsopts -threaded -fno-liberate-case
                       -funfolding-use-threshold1000
                       -funfolding-keeness-factor1000 -optlo-O3
                       -with-rtsopts=-N -O3
  build-depends:       base >=4.8 && <4.9,
                       repa >=3.4,
                       repa-algorithms >=3.4,
                       repa-devil >=0.3,
                       classy-prelude,
                       pretty >=1.1,
                       containers >=0.5,
                       MonadRandom >=0.5.1,
                       mtl >=2.2,
                       vector >=0.12.0.1,
                       primitive >=0.6.2.0
  hs-source-dirs:      src
  default-language:    Haskell2010
